# HydrodynamicsModeling

./: .gitignore  README.md  gitpush.bat
Azov3dHPC/: run.bat
Azov3dHPC/Azov3dHPC/: Azov3dHPC.vcxproj  header.h  kernel.cu
DecomposeGrid3D/: Doxyfile
DecomposeGrid3D/DecomposeGrid3D/: DecomposeGrid3D.vcxproj  DecomposeGrid3D.vcxproj.filters  Grid3D.cpp  Sheme.puml  main.cpp  run.sh  Параметры.xlsx
DecomposeGrid3D/docs/html/: _grid3_d_8cpp.html  _grid3_d_8cpp__dep__incl.map  _grid3_d_8cpp__dep__incl.md5  _grid3_d_8cpp__incl.map  _grid3_d_8cpp__incl.md5  annotated.html  classes.html  classtimer-members.html  (+119 more)
Documentation/: 2022 02 16 ClusterAndGrid.xlsx  Chistyakov.docx  GeneralPlan.docx  Kroneker.xlsx  MRSU.docx  ObjectModel.docx  TransferFragment_28-10-21.xlsx
Documentation/Эксперимент_2_8-12-2021/: nodesTransfer10000to1000000.txt  nodesTransfer100to10000.txt  nodesTransfer1to100.txt  Лист Microsoft Excel.xlsx
Figures/: ris6.eps
GIS/: 1111.htm  geopandas_test.py
Graphics/2D/: 1.mcd  11.mcd  Graph_2D.py  Graph_2D_1.py  Graph_color.py  Graph_colorbar.py  Graph_colorbar_2.py  writed_4.txt
Graphics/3D/: 1.py  3dScene.js  scatter3d_demo.py  threejs.html
Grid3DFragmentMATMOptimization/: Algorithms.xlsx
Grid3DFragmentMATMOptimization/MatmAlgsTesting/: Doxyfile  MatmAlgsTesting.sln
MathModelingCs/: MathModelingCs.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
ModelingSystemForHCS/: .gitignore  Doxyfile  README.md  build.bat  build.sh  clear.bat  gitpush.bat  run.bat  run.sh
ModelingSystemForHCS/src/: CMakeLists.txt  CMakeSettings.json  main.cpp
ModelingSystemForHCS/src/Grid3DSrc/: Classes.h  ComputingCluster.cpp  ComputingDevice.cpp  ComputingDeviceCPU.cpp  ComputingDeviceGPU.cpp  ComputingNode.cpp  Enums.cpp  Grid2DFragmentXY.cpp  Grid2DFragmentXZ.cpp  Grid2DFragmentYZ.cpp  Grid2DTransferPlaneXZ.cpp  Grid3D.cpp  Grid3DFragment.cpp  GridBlock3DByDevice.cpp  GridBlock3DByNode.cpp  GridHelper.cpp  LaunchSettings.cpp  LinearArray1D.cpp  LinearArray2D.cpp  LinearArray3D.cpp  LinearArrays2D.cpp  LinearArrays3D.cpp  SimpleStatistics.cpp  Timer.cpp  Utils.cpp  Utils.h
ModelingSystemForHCS/src/tests/: CUDA_Devices_Info.cpp  CUDA_Devices_Info.cu  CUDA_Devices_Info.h  matmAlgsTesting.cpp  matmAlgsTestingMultithreading.cpp  runTests.cpp  testFunctions.cpp  testFunctions.h  transferFragmentPlaneXOYTesting05.cpp  transferFragmentPlaneXOZTesting03.cpp  transferFragmentPlaneYOZTesting07.cpp  transferFragmentTesting02.cpp  transferFragmentTesting03.cpp  transferFragmentXOYTesting04.cpp  transferFragmentXOZTesting02.cpp  transferFragmentYOZTesting06.cpp
ModelingSystemForHCS_ControlModule/: .dockerignore  CreateMigrationBundle.bat  CreateMigrationScript.bat  CreateMigrationScriptIdempotent.bat  MigrationsInfo.txt  ModelingSystemForHCS_ControlModule.sln  UpdateDatabase.bat  UpdateDatabaseSSH.sh  clearTempFiles.bat  docker-compose.dcproj  docker-compose.override.yml  docker-compose.traefik---.yml  docker-compose.traefik.yml  docker-compose.yml  sshInfo.txt  start.sh  stop.sh  swarmStart.sh  traefik.metrics.yml
ModelingSystemForHCS_ControlModule/scripts/: mysql-migrate.sh
Numerical Methods/: DiffusionConvectionReaction3D.tex  Docs.tex  README.md
Numerical Methods/01 Cauchy problem/: README.md  rungeKutta.xlsx
Numerical Methods/01 SLAE/: PTM.cpp  SLAE.xlsx
Numerical Methods/02 Cauchy problem/: README.md  rungeKutta.xlsx
Numerical Methods/figs/: ris2.eps  ris3.eps  shablon.eps
_deprecated/Azov3dHPC/: Azov3dHPC.sln
_deprecated/DecomposeGrid3D/: DecomposeGrid3D.sln  Doxyfile
mrsu/: CMakeLists.txt  mrsu.cpp  mrsu_tests.xlsx
(+1862 files in other folders)
